# TuneForge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile.evaluate  Dockerfile.pipeline  Dockerfile.train  README.md  dvc.yaml  main.ipynb  main.py  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
config/: experiment.yaml  hyperparams.yaml  sweeps.yaml
deploy/: upload_artifact.sh
scripts/: test_save.py  test_train_save.py
src/components/: data_ingestion.py  data_transformation.py  logger.py  model_evaluation.py  model_trainer.py
src/components/evaluation/: generate_responses.py  judge.py
src/components/logger/: __init__.py
src/constants/: __init__.py
src/entity/: artifact_entity.py  config_entity.py  experiment_config.py
src/evaluation/: judge_responses.py
src/judge/: generate_responses.py  judge_responses.py
src/logger/: __init__.py
src/pipeline/: run_stage.py  sweep.py
src/utils/: main_utils.py  text_utils.py
tests/: test_experiment_config.py  test_response_masking.py  test_sampling.py  test_sweep.py
tests/components/evaluation/: test_generate_responses.py  test_judge.py
