[project]
name = "tuneforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "datasets>=3.0.0",
    "fastapi>=0.139.0",
    "from-root>=1.3.0",
    "jinja2>=3.1.6",
    "pandera>=0.32.1",
    # torch/transformers capped to what unsloth 2026.7.2 supports (torch<=2.7,
    # transformers<=5.5). unsloth freezes these to versions it has kernels for;
    # newer -> import/runtime breakage. Local is compile-only, so downgrade is free.
    "torch>=2.4.0,<=2.7.0",
    "transformers>=4.51.3,<=5.5.0",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
# GPU-only training stack, version-locked to unsloth. unsloth hard-couples to
# trl (<=0.24.0) + a stale unsloth-zoo needs the guarded import; keep both pinned
# together. trl 0.24 still uses the modern API (max_length / eval_strategy /
# processing_class), so model_trainer._train needs no change. See:
# https://github.com/unslothai/unsloth/blob/main/pyproject.toml
gpu = [
    "unsloth==2026.7.2",
    "unsloth-zoo",
    "trl==0.24.0",
    "bitsandbytes>=0.44",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "dvc>=3.67.1",
    "pre-commit>=4.6.0",
]
