[project]
name = "tuneforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

# Shared runtime for all stages; GPU stack lives in the `gpu` group.
dependencies = [
    "from-root>=1.3.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    # torch/transformers capped to what unsloth 2026.7.2 supports.
    "torch>=2.4.0,<=2.7.0",
    "transformers>=4.51.3,<=5.5.0",
]

[dependency-groups]
# GPU stack shared by train + evaluate; versions pinned together around unsloth.
gpu = [
    "unsloth==2026.7.2",
    "unsloth-zoo",
    "bitsandbytes>=0.44",
    "peft>=0.14",
]

# Training pipeline: ingest -> transform -> train.
train = [
    { include-group = "gpu" },
    "trl==0.24.0",
    "datasets>=3.0.0",
    "wandb>=0.25.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

# Eval phase A (generate): base + fine-tuned responses on the test split.
evaluate = [
    { include-group = "gpu" },
    "huggingface-hub>=0.34",
    "tqdm>=4.66",
    "numpy>=1.26",
    "pyarrow>=17.0",
    "python-dotenv>=1.0",
]

dev = [
    "detect-secrets>=1.5.0",
    "dvc>=3.67.1",
    "pre-commit>=4.6.0",
]

# Eval phase B (judge, local): DeepSeek grading + ROUGE-L + BERTScore.
judge = [
    "openai>=1.50",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "pandas>=2.0",
    "pyarrow>=17.0",
    "python-dotenv>=1.0",
]

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before imports that trigger HF downloads.
"src/pipeline/run_stage.py" = ["E402"]
